# Have-you-seen-the-gas-prices-today

./: .gitignore  README.md  docker-compose.yml
.cursor/rules/: 001-project.mdc  002-testing.mdc  003-docker.mdc  004-preferred-tools.mdc  005-logging.mdc
app/: Dockerfile  Makefile  pyproject.toml
backend/: config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/controllers/: documents_controller.py  engineer_controller.py  products_controller.py  savings_controller.py
backend/models/: schemas.py
backend/scripts/: ingest_hts.py  parse_usmca_annex.py
backend/services/: cbp_rulings.py  hs_search.py  hts_cache.py  rvc_calculator.py  savings_calculator.py
backend/tests/: conftest.py  test_b01_environment.py  test_b02_database.py  test_b06_hts_cache.py  test_b08_rvc_calculator.py  test_b09_cbp_rulings.py  test_b13_usmca_endpoint.py  test_b15_engineer_endpoint.py  test_b16_coo_generator.py  test_b18_documents_endpoint.py
charlene/: AGENTS.md
charlene/.devcontainer/: devcontainer.json
dave/: TARIFFIQ_README.md  TariffIQ.md
frontend/: package-lock.json
kavi/: .gitignore  Makefile  docker-compose.yml
kavi/backend/: .env.example  Makefile  cache.py  config.py  main.py  pyproject.toml  pytest.ini
kavi/backend/controllers/: claude_controller.py  hs_codes_controller.py  marine_traffic_controller.py  product_analysis_controller.py  tariff_intelligence_controller.py
kavi/backend/services/: tariff_intelligence.py
kavi/backend/tests/: conftest.py  test_cache.py  test_claude_controller.py
kirat/: README.md
main/: CLAUDE.md
(+200 files in other folders)
