[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=25.12.0",
    "colorlog>=6.10.1",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "logfire>=4.29.0",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "poetry-dynamic-versioning>=1.10.0",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.70.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-black>=0.6.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "websockets>=14.0",
]
